[package]
name = "xfftcodec"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes `-g`

[dependencies]
clap = { version = "4.4.14", features = ["derive"] }
nix = { version ="0.27.1", features = ["sched"] }
syscalls = "0.6.15"
wav = "1.0.0"
xfft = "0.2.0"
